docs/0.16/_sources/api/gammapy.irf.EDispKernel.rst.txt
EDispKernel
===========

.. currentmodule:: gammapy.irf

.. autoclass:: EDispKernel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~EDispKernel.default_interp_kwargs
      ~EDispKernel.e_reco
      ~EDispKernel.e_true
      ~EDispKernel.pdf_matrix

   .. rubric:: Methods Summary

   .. autosummary::

      ~EDispKernel.apply
      ~EDispKernel.from_diagonal_response
      ~EDispKernel.from_gauss
      ~EDispKernel.from_hdulist
      ~EDispKernel.get_bias
      ~EDispKernel.get_bias_energy
      ~EDispKernel.get_mean
      ~EDispKernel.get_resolution
      ~EDispKernel.pdf_in_safe_range
      ~EDispKernel.peek
      ~EDispKernel.plot_bias
      ~EDispKernel.plot_matrix
      ~EDispKernel.read
      ~EDispKernel.to_hdulist
      ~EDispKernel.to_table
      ~EDispKernel.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: default_interp_kwargs
   .. autoattribute:: e_reco
   .. autoattribute:: e_true
   .. autoattribute:: pdf_matrix

   .. rubric:: Methods Documentation

   .. automethod:: apply
   .. automethod:: from_diagonal_response
   .. automethod:: from_gauss
   .. automethod:: from_hdulist
   .. automethod:: get_bias
   .. automethod:: get_bias_energy
   .. automethod:: get_mean
   .. automethod:: get_resolution
   .. automethod:: pdf_in_safe_range
   .. automethod:: peek
   .. automethod:: plot_bias
   .. automethod:: plot_matrix
   .. automethod:: read
   .. automethod:: to_hdulist
   .. automethod:: to_table
   .. automethod:: write
